# hypha-debugger

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: publish_npm.yml  publish_pypi.yml
docs/: index.html
examples/: bookmarklet.html  e2e-test.py  js-basic.html  py-basic.py  py-sync.py  test-page-controller.html
extension/: INSTALL.txt  README.md  manifest.json  offscreen.html  package.json  sidepanel.html  tsconfig.json
extension/src/: background.ts  browser-tools.ts  chrome.d.ts  content.ts  main-world.ts  offscreen.ts  runtime-channel.ts  service-catalog.ts  sidepanel.ts
javascript/: package-lock.json  package.json  rollup.config.js  tsconfig.json
javascript/scripts/: build-bookmarklet.mjs  build-extension.mjs
javascript/src/: debugger.ts  index.ts
javascript/src/page-controller/: actions.ts  dom-tree.d.ts  dom.ts  index.ts  page-info.ts  types.ts
javascript/src/relay/: agent.ts  channel.ts  connector.ts  instruction.ts  protocol.ts  service-map.ts  service-url.ts
javascript/src/services/: dom.ts  execute.ts  info.ts  navigate.ts  page-controller.ts  react.ts  screenshot.ts  skill.ts
javascript/src/ui/: cursor.ts  overlay.ts  styles.ts
javascript/src/utils/: env.ts  wrap-fn.ts
python/: README.md  pyproject.toml
python/hypha_debugger/: __init__.py  __main__.py  cli.py  debugger.py
python/hypha_debugger/services/: execute.py  filesystem.py  info.py  inspect_vars.py  shell.py  source.py
python/hypha_debugger/utils/: env.py
python/tests/: test_cli.py  test_services.py  test_shell.py
