[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypha-debugger"
version = "0.1.7"
description = "Injectable debugger for Python processes and AI agents, powered by Hypha RPC"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Amun AI AB"}]
keywords = ["debugger", "hypha", "rpc", "remote-debugging", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "hypha-rpc>=0.20.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/amun-ai/hypha-debugger"
Repository = "https://github.com/amun-ai/hypha-debugger"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
full = [
    "psutil>=5.9",
]

[project.scripts]
hypha-debugger = "hypha_debugger.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hypha_debugger*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
